# mandelbrot-mpi-cuda-omp

./: .gitignore  CMakeLists.txt  README.md  plan.md  plan_partA.md  plan_partB.md
docs/: report.md  report_partA.md
docs/results/: benchmark.csv  benchmark_mpi.csv  benchmark_mpi_weak.csv  imbalance.csv  schedule_comparison.csv
include/: mandelbrot.cuh  mandelbrot_core.hpp
scripts/: collect_results.sh  compare_ppm.py  plot_mpi_results.py  plot_partB.py  run_mpi_imbalance.sh  run_mpi_strong.sh  run_schedule_study.sh  test_partA.sh
src/: benchmark.cpp  benchmark_mpi.cpp  main.cpp  mandelbrot.cu  mandelbrot_mpi.cpp  mandelbrot_mpi_cuda.cpp  mandelbrot_omp.cpp  mandelbrot_serial.cpp
